--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,7 @@
 $offBlack: rgb(53,52,53);
-$breakpoint: 'screen and (min-width: 769px)';
-$fontBreakpoint: 'screen and (min-width: 1024px)';
+$row-width: 1400px;
+//$breakpoint: 'screen and (min-width: 769px)';
+//$fontBreakpoint: 'screen and (min-width: 1024px)';
 
 @import "foundation/scss/foundation/variables";
 @import "foundation/scss/foundation/components/global";
@@ -42,7 +43,7 @@ body{
     background: black;
     margin: 0 auto;
     min-width: 320px;
-    max-width: 1280px;
+    //max-width: 1280px;
     
 }
 
@@ -51,7 +52,7 @@ body{
     width: 100%;
     height: 100%;
     margin: 0 auto;
-    max-width: 1280px;
+    //max-width: 1280px;
 }
 
 h1, h2, h3, h4, h5, h6{
@@ -65,6 +66,23 @@ p{
    @include tits;
 }
 
+.tophalf{
+    @media #{$small}{
+        @include grid-row();
+    }
+}
+
+.leftCol, .rightCol{
+    @media #{$small}{
+        @include grid-column(6);
+    }
+}
+
+.rightCol{
+    @media #{$small}{
+        margin-top: 8%;
+    }
+}
 .unionLogos{    
     @include grid-row();
     @include trans;
@@ -154,11 +172,14 @@ p{
             color: rgb(214, 128, 5);
             border-bottom-color: rgb(214, 128, 5);
         }
-        @include trans;
+        //@include trans;
     }
 }
 
 .graphics{
+    @media #{$small}{
+        @include grid-row();
+    }
 }
 
 .graphic{
@@ -167,6 +188,7 @@ p{
     width: 70%;
     margin: 25px auto;
     text-align: center;
+    
         
     img{
        @include trans;
@@ -181,6 +203,7 @@ p{
         opacity: 0;
         top: 0;
         left: 0;
+        width: 70%;
         &:hover{opacity:1;}
     }
             
@@ -207,19 +230,20 @@ p{
     .bannerRight{
         right: -5%;
     }
+    @media #{$small}{
+        @include grid-column($columns: 4);
+        padding: 50px;
+        //margin: 0 25px;
+    }
         
 }
 
 #drinks, #pens{
     h4{
-        padding-top: 5%;
+       // padding-top: 5%;
     }
 }
 
-
-//.tophalf{
-//    max-width:1280px;
-//}
 .content{
     width: 95%;
     margin: 0 auto;
@@ -282,7 +306,6 @@ p{
 .countdown_section {
 	display: block;
 	float: left;
-	//font-size: 75%;
 	text-align: center;
 }
 .countdown_amount {
