--- a/style.css
+++ b/style.css
@@ -762,6 +762,10 @@ p {
   width: 95%;
   margin: 0 auto;
   text-align: center; }
+  .content a:link, .content a:visited {
+    color: white; }
+  .content a:hover {
+    color: #d68005; }
   .content p {
     font-size: 16px;
     margin-top: 0; }
@@ -853,5 +857,3 @@ p {
   display: block;
   width: 100%;
   font-size: 4em; }
-
-/*# sourceMappingURL=style.css.map */
