--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,6 @@
 $offBlack: rgb(53,52,53);
+$orange:  rgb(214, 128, 5);
 $row-width: 1280px;
-//$breakpoint: 'screen and (min-width: 769px)';
-//$fontBreakpoint: 'screen and (min-width: 1024px)';
 
 @import "foundation/scss/foundation/variables";
 @import "foundation/scss/foundation/components/global";
@@ -43,8 +42,6 @@ body{
     background: black;
     margin: 0 auto;
     min-width: 320px;
-    //max-width: 1280px;
-    
 }
 
 .wrap{
@@ -52,7 +49,6 @@ body{
     width: 100%;
     height: 100%;
     margin: 0 auto;
-    //max-width: 1280px;
 }
 
 h1, h2, h3, h4, h5, h6{
@@ -187,7 +183,6 @@ p{
     @media #{$small}{
         @include grid-column($columns: 4);
         padding: 1%;
-        //margin: 0 25px;
     }
 }
 
@@ -212,7 +207,6 @@ p{
         opacity: 0;
         top: 0;
         left: 0;
-       // width: 70%;
         &:hover{opacity:1;}
     }
             
@@ -253,6 +247,14 @@ p{
     width: 95%;
     margin: 0 auto;
     text-align: center;
+    a{
+        &:link, &:visited{
+            color: white;
+        }
+        &:hover{
+            color: $orange;
+        }
+    }
     
     p{
         font-size: 16px;
@@ -333,7 +335,6 @@ p{
 	text-align: center;
 }
 .countdown_amount {
-	//font-size: 200%;
     font-size: 4em;
 }
 .countdown_descr {
